# incredible-squaring-avs

./: .env.example  .env.template  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  devnet.yaml  docker-compose-build.yaml  docker-compose.yml  eigenlayer-deployed-anvil-state.json  go.mod  go.sum  install.sh  main.go  notes.md  operator.Dockerfile  plugin.Dockerfile  register-operator.Dockerfile  remappings.txt
.github/workflows/: build-and-publish.yaml  check-fmt.yml  contracts-tests.yml  daily-test.yaml  docker-compose-up-test.yaml  docker-publish.yaml  e2e-tests.yaml  integration-tests.yml  rewards-scripts-check.yaml  storage-checker.yaml  unit-tests.yml
aggregator/: aggregator.go  aggregator_test.go  rpc_server.go  rpc_server_test.go
aggregator/cmd/: main.go
aggregator/mocks/: chain.go
aggregator/types/: types.go
challenger/: challenger.go  challenger_test.go
challenger/cmd/: main.go
challenger/mocks/: chain.go
challenger/types/: types.go
cli/: main.go
cli/actions/: create_new_operator_keys.go  deposit_into_strategy.go  print_operator_status.go  (+4 more)
common/: abi.go  read_config.go
config-files/: aggregator-docker-compose.yaml  aggregator.yaml  challenger.yaml  node_config-docker-compose.anvil.yaml  node_config.anvil.yaml  operator-1.anvil.yaml  operator-2.anvil.yaml  operator-3.anvil.yaml  operator-docker-compose.anvil.yaml  operator.anvil.yaml  operator.goerli.yaml
contracts/: .env.example  .env.template  .gitignore  foundry.toml  generate-go-bindings.sh  incredible_squaring_config.json  operator_reward_config.json  payments.json  test_parse_payments.json
core/: utils.go
docker/: .gitignore  docker-compose-build.yaml  thegraph-docker-compose.yaml
keeper/: gen.go  keeper_test.go  registration.go
metrics/: metrics.go  noopmetrics.go
operator/: createquorum.go  gen.go  modifyallocations.go  operator.go  operator_test.go  priceFSM.go  registration.go  registration_test.go  rpc_client.go  service.go  setallocationdelay.go  setappointee.go  types.go
prometheus/: prometheus.yml
scripts/: create-and-claim-distribution.sh  deposit-into-mocktoken-strategy.sh  e2e_test.sh  rewards-script-check.sh  updateOperatorAddr.go
tests/: utils.go
types/: avs_config.go
(+160 files in other folders)
